# TalkWithGemini

./: .env.example  .env.tpl  .gitignore  .prettierrc  Dockerfile  README.md  components.json  docker-compose.yml  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  types.d.ts  vercel.json
app/: globals.css  layout.tsx  manifest.ts  page.tsx  sw.ts
components/: AgentMarket.tsx  AssistantMarket.tsx  AssistantRecommend.tsx  AttachmentArea.tsx  AudioPlayer.tsx  BubblesLoading.tsx  Button.tsx  EditableArea.tsx  ErrorMessageItem.tsx  FileList.tsx  FileUploader.tsx  I18nProvider.tsx  IconButton.tsx  ImageUploader.tsx  MessageItem.tsx  PluginStore.tsx  ResponsiveDialog.tsx  SearchBar.tsx  Setting.tsx  StoreProvider.tsx  SystemInstruction.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Topic.tsx
constant/: attachment.ts  errors.ts  locales.ts  model.ts  modelSettings.ts  plugins.ts  topics.ts
docs/: How-to-deploy-the-Cloudflare-Worker-api-proxy.md
hooks/: useAudio.ts  useMediaQuery.ts
locales/: ar-SA.json  de-DE.json  en.json  es-ES.json  fr-FR.json  ja-JP.json  ko-KR.json  pt-BR.json  ru-RU.json  zh-TW.json  zh.json
plugins/: i18n.ts  tools.ts
public/: manifest.json  sw.js
src-tauri/: Cargo.toml  Release.entitlements  info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
store/: assistant.ts  attachment.ts  chat.ts  model.ts  plugin.ts  setting.ts
utils/: AgentMarket.ts  AssistantMarketUrl.ts  AudioStream.ts  FibonacciTimer.ts  FileManager.ts  PromiseQueue.ts  Recorder.ts  Storage.ts  chat.ts  (+12 more)
(+29 files in other folders)
